@@ -1,2 +1,2 @@
 path|title|description
-/file1.txt|File 1|File 1 description
+/file1.txt|File 1|File 1 description|a bit more values that will brake parsing if 'strict' is True
